# gh-sql

./: Cargo.toml  README.md  build.rs
.github/workflows/: actionlint.yaml  ci.yaml  clippy.yaml  release.yaml
scripts/: build.sh
src/: batch.rs  delete_item.graphql  gh.rs  github.rs  list_fields.graphql  list_items.graphql  main.rs  output.rs  prompt.rs  storage.rs  update_item_field.graphql
