[package]
name = "ghsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gluesql = { version = "0.9", default-features = false, features = ["sorter"] }
async-trait = "0.1"
rustyline = "9.1"
structopt = "0.3"
